fixed jumping for the image

--- a/public/dukafy/css/animations.css
+++ b/public/dukafy/css/animations.css
@@ -10,8 +10,8 @@ p.s. I am available for Freelance hire (UI design, web development). mail: mille
 
 .jump {
     position: relative;
-    -webkit-animation: jump 2s ease-in-out infinite;
-    animation: jump 2s ease-in-out infinite;
+    /* -webkit-animation: jump 2s ease-in-out infinite;
+    animation: jump 2s ease-in-out infinite; */
 }
 
 .puls {
