--- a/public/dukafy/css/style.css
+++ b/public/dukafy/css/style.css
@@ -529,7 +529,7 @@ Header
 
 .header-macbook img {
     width: 190%;
-    margin-left: -50px;
+    margin-left: -150px;
 }
 
 .social-icons {
